[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-engine"
version = "2025.0.0"
description = "A unified engine of core data structures and distributed systems primitives that modern tech companies rely on, packaged with consistent, developer‑friendly APIs. Drop it in to build trusted, scalable features without reinventing the fundamentals."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Michael Cerreto", email = "retto12345678@gmail.com"},
]
keywords = [
    "data-structures",
    "crdt",
    "merkle-tree",
    "bloom-filter",
    "hyperloglog",
    "trie",
    "skip-list",
    "b-tree",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "bitarray>=2.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/cerredz/Nexus-Engine"
Issues = "https://github.com/cerredz/Nexus-Engine/issues"
Source = "https://github.com/cerredz/Nexus-Engine"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["engine*"] } }
# If you keep implicit namespace packages (no __init__.py), you may need:
# packages = { find = { where = ["."], include = ["engine*"], namespaces = true } }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = false

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"